objects/OSM_Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>API_URL__c</fullName>
        <inlineHelpText>Exact URL we are sending to target system .</inlineHelpText>
        <label>API_URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <formula>$Label.OSM_Environment</formula>
        <label>Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Batch_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Batch Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Batch_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Batch Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged-In User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Jobs_Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Jobs Failed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Created_Date__c</fullName>
        <formula>TEXT(DAY(DATEVALUE(CreatedDate)))+&quot; &quot;+IF(MONTH(DATEVALUE(CreatedDate))==1,&quot;Jan&quot;,IF(MONTH(DATEVALUE(CreatedDate))==2, &quot;Feb&quot;,IF(MONTH(DATEVALUE(CreatedDate))==3, &quot;Mar&quot;,IF(MONTH(DATEVALUE(CreatedDate))==4, &quot;Apr&quot;,IF(MONTH(DATEVALUE(CreatedDate))==5, &quot;May&quot;,IF(MONTH(DATEVALUE(CreatedDate))==6, &quot;Jun&quot;,IF(MONTH(DATEVALUE(CreatedDate))==7, &quot;Jul&quot;,IF(MONTH(DATEVALUE(CreatedDate))==8, &quot;Aug&quot;,IF(MONTH(DATEVALUE(CreatedDate))==9, &quot;Sept&quot;,IF(MONTH(DATEVALUE(CreatedDate))==10, &quot;Oct&quot;,IF(MONTH(DATEVALUE(CreatedDate))==11, &quot;Nov&quot;,&quot;Dec&quot;)))))))))))+&quot; &quot;+TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Integration_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Integration Log</label>
        <referenceTo>OSM_Integration_Log__c</referenceTo>
        <relationshipLabel>OSM Transaction Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <label>Request Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retrial_Count__c</fullName>
        <label>Retrial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OSM</fullName>
                </value>
                <value>
                    <fullName>BOLT</fullName>
                </value>
                <value>
                    <fullName>VERTEX</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OSM</fullName>
                </value>
                <value>
                    <fullName>BOLT</fullName>
                </value>
                <value>
                    <fullName>VERTEX</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>WINLIMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Payment</label>
        <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
        <relationshipLabel>OSM Integration Logs</relationshipLabel>
        <relationshipName>OSM_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Message_Identifier__c</fullName>
        <label>Unique Message Identifier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>OSM Integration Log</label>
    <listViews>
        <fullName>Success</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Error_Description__c</columns>
        <columns>Logged_In_User__c</columns>
        <columns>Request__c</columns>
        <columns>Response__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>CC_Order__c</columns>
        <columns>Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failure</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OSM- {0000000000}</displayFormat>
        <label>OSM Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSM Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>